# ChangeLog for app-misc/worker
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/worker/ChangeLog,v 1.108 2013/04/15 19:03:07 ago Exp $

  15 Apr 2013; Agostino Sarubbo <ago@gentoo.org> worker-2.19.6.ebuild:
  Stable for x86, wrt bug #465910

  15 Apr 2013; Agostino Sarubbo <ago@gentoo.org> worker-2.19.6.ebuild:
  Stable for amd64, wrt bug #465910

  15 Apr 2013; Agostino Sarubbo <ago@gentoo.org> worker-2.19.6.ebuild:
  Stable for ppc, wrt bug #465910

  14 Mar 2013; Sergey Popov <pinkbyte@gentoo.org> worker-2.18.1.ebuild,
  worker-2.19.6.ebuild:
  Fix HOMEPAGE and SRC_URI

*worker-2.19.6 (14 Mar 2013)

  14 Mar 2013; Sergey Popov <pinkbyte@gentoo.org> +worker-2.19.6.ebuild,
  metadata.xml:
  Version bump, wrt bug #461572. EAPI 5, epatch_user support, add more USE
  flags to control optional dependencies, generic ebuild cleanup

  08 Oct 2012; Michael Palimaka <kensington@gentoo.org> -worker-2.17.8.ebuild:
  Remove old.

  30 Sep 2012; Raúl Porcel <armin76@gentoo.org> worker-2.17.8.ebuild,
  worker-2.18.1.ebuild:
  Drop alpha keywords

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> worker-2.18.1.ebuild:
  x86 stable wrt bug #399945

  15 Feb 2012; Brent Baude <ranger@gentoo.org> worker-2.18.1.ebuild:
  Marking worker-2.18.1 ppc for bug 399945

  12 Feb 2012; Agostino Sarubbo <ago@gentoo.org> worker-2.18.1.ebuild:
  Stable for amd64, wrt bug #399945

  09 Feb 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #85926

*worker-2.18.1 (01 Oct 2011)

  01 Oct 2011; Tobias Scherbaum <dertobi123@gentoo.org> -worker-2.18.0.ebuild,
  +worker-2.18.1.ebuild:
  Version bump

*worker-2.18.0 (28 Aug 2011)

  28 Aug 2011; Tobias Scherbaum <dertobi123@gentoo.org> -worker-2.17.11.ebuild,
  +worker-2.18.0.ebuild:
  Version bump (#377619)

*worker-2.17.11 (17 Mar 2011)

  17 Mar 2011; Tobias Scherbaum <dertobi123@gentoo.org> -worker-2.17.10.ebuild,
  +worker-2.17.11.ebuild: